--- a/jdk-app/backend/pom.xml
+++ b/jdk-app/backend/pom.xml
@@ -67,6 +67,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <mainClass>com.projetcloud.ProjetCloudApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
