--- a/frontend/Dockerfile-dev
+++ b/frontend/Dockerfile-dev
@@ -6,5 +6,4 @@ COPY ./vue/package*.json ./
 
 RUN npm install
 
-#CMD ["npm", "run", "dev"]
-CMD ["tail", "-f", "/dev/null"]
+CMD ["npm", "run", "dev"]
