--- a/backend/Dockerfile-dev
+++ b/backend/Dockerfile-dev
@@ -1,17 +1,10 @@
-# Utilisation d'une image Java
 FROM maven:3.8.4-openjdk-17-slim
 
-# Définir le répertoire de travail
 WORKDIR /backend
 
-# Copier le fichier pom.xml pour installer les dépendances Maven
-COPY pom.xml ./
+COPY pom.xml pom.xml
+RUN mvn dependency:go-offline
 
-# Copier tout le projet dans le répertoire de travail
-COPY ./ ./
+COPY . .
 
-# Exécution de Maven install pour compiler le code source
-RUN mvn install
-
-# Commande pour exécuter votre application Java
-CMD ["java", "-cp", "target/classes", "./src/main/java/com/projetcloud/ProjetCloudApplication.java"]
+CMD ["mvn", "spring-boot:run"]
