--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -19,5 +19,5 @@ services:
       - /frontend/node_modules/
     ports:
       - "3000:3000"
-#    depends_on:
-#      - backend-dev
+    depends_on:
+      - backend-dev
