--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Config
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
+server.port=8081
 # Mongo
 spring.data.mongodb.uri=mongodb://localhost:27017/projetCloud
 
