--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,5 +1,13 @@
 version: '3'
 services:
+  mongodb_container:
+    build:
+      context: ./backend
+      dockerfile: ./Dockerfile-mongo
+    container_name: mongo
+    restart: always
+    ports:
+      - "27017:27017"
   backend-dev:
     build:
       context: ./backend
