--- a/.github/workflows/buildRecette.yml
+++ b/.github/workflows/buildRecette.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Set up Azure CLI
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Build Java application
         run: |
@@ -26,7 +28,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build -t recette.azurecr.io/backend:latest .
-          docker push recette.azurecr.io.io/backend:latest
+          docker push recette.azurecr.io/backend:latest
 
   frontend:
     runs-on: ubuntu-latest
@@ -38,7 +40,9 @@ jobs:
       - name: Set up Azure CLI
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Build Vue.js application
         run: |
@@ -48,5 +52,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t recette.azurecr.io.io/frontend:latest .
-          docker push recette.azurecr.io.io/frontend:latest
+          docker build -t recette.azurecr.io/frontend:latest .
+          docker push recette.azurecr.io/frontend:latest
