--- a/.github/workflows/buildRecette.yml
+++ b/.github/workflows/buildRecette.yml
@@ -2,7 +2,7 @@ name: Build-and-Push-to-Container-Registry-Recette
 
 on:
   workflow_run:
-    workflows: [ "Tests-Unitaires-Backend" ]
+    workflows: ["Tests-Unitaires-Backend"]
     types:
       - completed
 
@@ -14,12 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Azure CLI
-        uses: azure/login@v1
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Java application
         run: |
@@ -27,8 +27,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t recette.azurecr.io/backend:latest .
-          docker push recette.azurecr.io/backend:latest
+          docker build -t ghcr.io/${{ github.repository }}/backend:latest .
+          docker push ghcr.io/${{ github.repository }}/backend:latest
 
   frontend:
     runs-on: ubuntu-latest
@@ -37,12 +37,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Azure CLI
-        uses: azure/login@v1
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Vue.js application
         run: |
@@ -52,5 +52,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t recette.azurecr.io/frontend:latest .
-          docker push recette.azurecr.io/frontend:latest
+          docker build -t ghcr.io/${{ github.repository }}/frontend:latest .
+          docker push ghcr.io/${{ github.repository }}/frontend:latest
