--- a/.github/workflows/buildRecette.yml
+++ b/.github/workflows/buildRecette.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/backend:latest .
-          docker push ghcr.io/${{ github.repository }}/backend:latest
+          docker build -t ghcr.io/projetcloud/backend:latest .
+          docker push ghcr.io/projetcloud/backend:latest
 
   frontend:
     runs-on: ubuntu-latest
@@ -52,5 +52,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/frontend:latest .
-          docker push ghcr.io/${{ github.repository }}/frontend:latest
+          docker build -t ghcr.io/projetcloud/frontend:latest .
+          docker push ghcr.io/projetcloud/frontend:latest
