--- a/backend/Dockerfile-prod
+++ b/backend/Dockerfile-prod
@@ -10,6 +10,9 @@ RUN mvn clean package
 # Run de l'appli
 FROM openjdk:17.0.1-jdk-slim
 
+RUN pwd
+RUN ls -R /backend/target
+
 COPY --from=builder ./backend/target/backend-1.0.0.jar backend-1.0.0.jar
 
 EXPOSE 8080
