--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -2,6 +2,9 @@ FROM node:16.16.0
 
 WORKDIR /frontend
 
+RUN pwd
+RUN ls -R /backend/target
+
 COPY ./vue/package*.json ./
 RUN npm install
 COPY ./vue ./
