--- a/backend/Dockerfile-prod
+++ b/backend/Dockerfile-prod
@@ -11,7 +11,7 @@ RUN mvn clean package
 FROM openjdk:17.0.1-jdk-slim
 
 RUN pwd
-RUN ls -R /backend/target
+RUN ls -R
 
 COPY --from=builder ./backend/target/backend-1.0.0.jar backend-1.0.0.jar
 
