--- a/.github/workflows/buildRecette.yml
+++ b/.github/workflows/buildRecette.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ghcr.io/${{ github.actor }}/${{ github.repository }}/backend:latest -f backend/Dockerfile-prod .
-          docker push ghcr.io/${{ github.actor }}/${{ github.repository }}/backend:latest
+          docker build -t ghcr.io/${{ github.actor }}/projetcloud/backend:latest -f backend/Dockerfile-prod .
+          docker push ghcr.io/${{ github.actor }}/projetcloud/backend:latest
 
   frontend:
     runs-on: ubuntu-latest
@@ -42,5 +42,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ghcr.io/${{ github.actor }}/${{ github.repository }}/frontend:latest -f frontend/Dockerfile-prod .
-          docker push ghcr.io/${{ github.actor }}/${{ github.repository }}/frontend:latest
+          docker build -t ghcr.io/${{ github.actor }}/projetcloud/frontend:latest -f frontend/Dockerfile-prod .
+          docker push ghcr.io/${{ github.actor }}/projetcloud/frontend:latest
