--- a/.github/workflows/buildRecette.yml
+++ b/.github/workflows/buildRecette.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   backend:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
       - name: Checkout code
@@ -27,7 +29,7 @@ jobs:
           context: .
           file: backend/Dockerfile-prod
           push: true
-          tags: ghcr.io/projetcloud/backend:latest
+          tags: ghcr.io/${{ github.actor }}/projetcloud/backend:latest
 
   frontend:
     runs-on: ubuntu-latest
