--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -2,11 +2,11 @@ FROM node:16.16.0
 
 WORKDIR /frontend
 
-COPY ./vue/package*.json ./
-
 RUN pwd
 RUN ls -R
 
+COPY ./frontend/vue/package*.json ./
+
 RUN npm install
-COPY ./vue ./
+COPY ./frontend/vue ./
 RUN npm run build
