--- a/.github/workflows/buildRecette.yml
+++ b/.github/workflows/buildRecette.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Extract project version from pom.xml
+        id: extract-version
+        run: |
+          echo "::set-output name=version::$(xmllint --xpath "string(/project/version)" pom.xml)"
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -30,7 +35,7 @@ jobs:
           context: .
           file: backend/Dockerfile-prod
           push: true
-          tags: ghcr.io/${{ github.actor }}/projetcloud/backend-recette:latest
+          tags: ghcr.io/${{ github.actor }}/projetcloud/backend-recette:${{ steps.extract-version.outputs.version }}
 
   frontend:
     runs-on: ubuntu-latest
@@ -41,6 +46,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Extract project version from pom.xml
+        id: extract-version
+        run: |
+          echo "::set-output name=version::$(xmllint --xpath "string(/project/version)" pom.xml)"
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v1
@@ -55,4 +65,4 @@ jobs:
           context: .
           file: frontend/Dockerfile-prod
           push: true
-          tags: ghcr.io/${{ github.actor }}/projetcloud/frontend-recette:latest
+          tags: ghcr.io/${{ github.actor }}/projetcloud/frontend-recette:${{ steps.extract-version.outputs.version }}
