--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "7.0.96",
     "axios": "^1.6.0",
     "core-js": "^3.29.0",
+    "jwt-decode": "^4.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
