--- a/.github/workflows/buildRecette.yml
+++ b/.github/workflows/buildRecette.yml
@@ -34,7 +34,7 @@ jobs:
           context: .
           file: backend/Dockerfile-prod
           push: true
-          tags: ghcr.io/${{ github.actor }}/projetcloud/backend-recette:${{ steps.extract-version.outputs.version }}
+          tags: ghcr.io/cripsoo/projetcloud/backend-recette:${{ steps.extract-version.outputs.version }}
 
   frontend:
     runs-on: ubuntu-latest
@@ -63,4 +63,4 @@ jobs:
           context: .
           file: frontend/Dockerfile-prod
           push: true
-          tags: ghcr.io/${{ github.actor }}/projetcloud/frontend-recette:${{ steps.extract-version.outputs.version }}
+          tags: ghcr.io/cripsoo/projetcloud/frontend-recette:${{ steps.extract-version.outputs.version }}
