--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -14,3 +14,4 @@ FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 
 COPY --from=builder /frontend/dist .
+COPY ./frontend/nginx.conf /etc/nginx/nginx.conf
