--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 server.port=8081
 # Mongo
-spring.data.mongodb.uri=mongodb://localhost:27017/projetCloud
+spring.data.mongodb.uri=mongodb+srv://projetCloud:qopjor-bygcut-5guvnY@projetcloud.kyhrlvv.mongodb.net/dbProjetCloud?retryWrites=true&w=majority
 
 # Security
 jwt.secret=['kGvRz!X5_9k{^Wk`>[[:%v`x!E_Zf9tzh8'8rb#2T]$2V6W=`a>,hz4baFMGq_
