--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Config
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-server.port=8081
+#server.port=8081
 # Mongo
 spring.data.mongodb.uri=mongodb+srv://projetCloud:qopjor-bygcut-5guvnY@projetcloud.kyhrlvv.mongodb.net/dbProjetCloud?retryWrites=true&w=majority
 
