--- a/outils/kubectl/recette-ingress.yaml
+++ b/outils/kubectl/recette-ingress.yaml
@@ -15,10 +15,7 @@ spec:
                 name: frontend-service
                 port:
                   number: 80
-    - host: recette-api.groupe6.froissant.work
-      http:
-        paths:
-          - path: /
+          - path: /api/
             pathType: Prefix
             backend:
               service:
