--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,7 +16,11 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-
+        <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-sync</artifactId>
+                <version>4.11.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
