--- a/outils/terraform/app/frontend/templates/frontend-deployment.yaml
+++ b/outils/terraform/app/frontend/templates/frontend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: frontend-deployment
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: frontend
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend-container
-          image: ghcr.io/cripsoo/projetcloud/frontend-recette:1.0.0
+          image: {{ .Values.image.repository }}{{ .Values.environment }}:{{ .Values.image.tag }}
           ports:
             - containerPort: 80
       imagePullSecrets:
