--- a/outils/terraform/app/ingress/templates/ingress.yaml
+++ b/outils/terraform/app/ingress/templates/ingress.yaml
@@ -1,11 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: recette-ingress
+  name: {{ .Values.environment }}-ingress
 spec:
   ingressClassName: nginx
   rules:
-    - host: recette.groupe6.froissant.work
+    - host: {{ .Values.environment }}.groupe6.froissant.work
       http:
         paths:
           - path: /
