--- a/.github/workflows/deployToRecette.yml
+++ b/.github/workflows/deployToRecette.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Installer kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: '1.28.4'
+          version: 'v1.28.4'
 
       - name: Installer Helm
         uses: azure/setup-helm@v3
         with:
-          version: '3.13.1'
+          version: 'v3.13.1'
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Terraform
