--- a/.github/workflows/deployToRecette.yml
+++ b/.github/workflows/deployToRecette.yml
@@ -19,16 +19,12 @@ jobs:
       - name: Checkout du code
         uses: actions/checkout@v2
 
-      - name: Connexion Azure
-        uses: azure/CLI@v1
-        with:
-          azcliversion: 2.55.0
-          inlineScript: |
-            az upgrade --yes
-            az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
-
-      - name: Redémarrer l'Agent
-        run: sudo systemctl restart github-runner
+#      - name: Connexion Azure
+#        uses: azure/CLI@v1
+#        with:
+#          azcliversion: 2.55.0
+#          inlineScript: |
+#            az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
 
       - name: Installer kubectl
         uses: azure/setup-kubectl@v3
