--- a/.github/workflows/deployToRecette.yml
+++ b/.github/workflows/deployToRecette.yml
@@ -19,12 +19,13 @@ jobs:
       - name: Checkout du code
         uses: actions/checkout@v2
 
-#      - name: Connexion Azure
-#        uses: azure/CLI@v1
-#        with:
-#          azcliversion: 2.55.0
-#          inlineScript: |
-#            az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
+      - name: Connexion Azure
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.0.79
+          useGlobalConfig: true
+          inlineScript: |
+            az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
 
       - name: Installer kubectl
         uses: azure/setup-kubectl@v3
