Pipeline Deploy to Env

--- a/.github/workflows/deployToRecette.yml
+++ b/.github/workflows/deployToRecette.yml
@@ -50,6 +50,7 @@ jobs:
       - name: Test install az
         run: |
           sudo az version
+          sudo az account show
 
       - name: Appliquer Terraform
         run: |
