--- a/.github/workflows/semgrep.yaml
+++ b/.github/workflows/semgrep.yaml
@@ -22,6 +22,10 @@ jobs:
         run: |
           python -m pip install semgrep
 
+      - name: List Files
+        run: |
+          ls -R
+
       - name: Run Semgrep
         run: |
           semgrep --config=semgrep.yml
