--- a/semgrep.yaml
+++ b/semgrep.yaml
@@ -1,10 +1,11 @@
 rules:
-  - id: python.security.insecure-crypto
-    languages:
-      - python
-    severity: WARNING  # Ajoutez cette ligne pour spécifier la gravité de la règle
-    message: "Insecure use of cryptography in Python"
+  - id: spring-sqli
     patterns:
       - pattern: |
-          import hashlib
-          hashlib.md5()
+          import org.springframework.jdbc.core.JdbcTemplate;
+          $JdbcTemplate jdbcTemplate;
+          String query = "SELECT * FROM users WHERE username = '" + input + "'";
+          jdbcTemplate.query(query, (rs, rowNum) -> rs.getString("username"));
+    message: "Potential SQL Injection vulnerability in Spring Boot application."
+
+
