--- a/.github/workflows/sonarQube.yml
+++ b/.github/workflows/sonarQube.yml
@@ -1,9 +1,11 @@
 name: SonarQube Scan
 
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - main
+    branches: ["develop"]
+  pull_request:
+    branches: ["develop"]
 
 jobs:
   sonarqube:
