--- a/.github/workflows/testsUnitaires.yml
+++ b/.github/workflows/testsUnitaires.yml
@@ -1,11 +1,10 @@
 name: Tests-Unitaires-Backend
 
 on:
-  workflow_dispatch:
-#  push:
-#    branches: ["develop"]
-#  pull_request:
-#    branches: ["develop"]
+  push:
+    branches: ["develop"]
+  pull_request:
+    branches: ["develop"]
 
 jobs:
   build:
