Tfstate dans le cloud.

--- a/.github/workflows/deployToEnv.yml
+++ b/.github/workflows/deployToEnv.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Initialisation Terraform
         run: |
           cd $GITHUB_WORKSPACE/outils/terraform
-          terraform init
+          terraform init -backend-config=configs/${{ github.event.inputs.environment }}.conf
 
       - name: Appliquer Terraform
         run: |
