Revert pour test ingress-nginx

--- a/outils/terraform/app/ingress/templates/ingress.yaml
+++ b/outils/terraform/app/ingress/templates/ingress.yaml
@@ -2,16 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.environment }}-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt
-    acme.cert-manager.io/http01-edit-in-place: "true"
+{{/*  annotations:*/}}
+{{/*    kubernetes.io/ingress.class: nginx*/}}
+{{/*    cert-manager.io/cluster-issuer: letsencrypt*/}}
+{{/*    acme.cert-manager.io/http01-edit-in-place: "true"*/}}
 spec:
   ingressClassName: nginx
-  tls:
-    - hosts:
-        - {{ .Values.environment }}.groupe6.froissant.work
-      secretName: secret-tls
+{{/*  tls:*/}}
+{{/*    - hosts:*/}}
+{{/*        - {{ .Values.environment }}.groupe6.froissant.work*/}}
+{{/*      secretName: secret-tls*/}}
   rules:
     - host: {{ .Values.environment }}.groupe6.froissant.work
       http:
