--- a/outils/terraform/app/ingress/templates/ingress.yaml
+++ b/outils/terraform/app/ingress/templates/ingress.yaml
@@ -3,9 +3,7 @@ kind: Ingress
 metadata:
   name: {{ .Values.environment }}-ingress
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 {{/*  annotations:*/}}
 {{/*    kubernetes.io/ingress.class: nginx*/}}
 {{/*    cert-manager.io/cluster-issuer: letsencrypt*/}}
@@ -20,14 +18,14 @@ spec:
     - host: {{ .Values.environment }}.groupe6.froissant.work
       http:
         paths:
-          - path: /
+          - path: /?(.*)
             pathType: Prefix
             backend:
               service:
                 name: frontend-service
                 port:
                   number: 80
-          - path: /api/
+          - path: /api/?(.*)
             pathType: Prefix
             backend:
               service:
