--- a/outils/terraform/app/ingress/templates/ingress.yaml
+++ b/outils/terraform/app/ingress/templates/ingress.yaml
@@ -17,14 +17,14 @@ spec:
     - host: {{ .Values.environment }}.groupe6.froissant.work
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: frontend-service
                 port:
                   number: 80
-          - path: /api/?(.*)
+          - path: /api/
             pathType: Prefix
             backend:
               service:
