--- a/outils/terraform/app/ingress/templates/ingress.yaml
+++ b/outils/terraform/app/ingress/templates/ingress.yaml
@@ -3,16 +3,14 @@ kind: Ingress
 metadata:
   name: {{ .Values.environment }}-ingress
   annotations:
-{{/*  annotations:*/}}
-{{/*    kubernetes.io/ingress.class: nginx*/}}
-{{/*    cert-manager.io/cluster-issuer: letsencrypt*/}}
+    cert-manager.io/cluster-issuer: letsencrypt
 {{/*    acme.cert-manager.io/http01-edit-in-place: "true"*/}}
 spec:
   ingressClassName: nginx
-{{/*  tls:*/}}
-{{/*    - hosts:*/}}
-{{/*        - {{ .Values.environment }}.groupe6.froissant.work*/}}
-{{/*      secretName: secret-tls*/}}
+  tls:
+    - hosts:
+        - {{ .Values.environment }}.groupe6.froissant.work
+      secretName: secret-tls
   rules:
     - host: {{ .Values.environment }}.groupe6.froissant.work
       http:
