--- a/.github/workflows/deployToEnv.yml
+++ b/.github/workflows/deployToEnv.yml
@@ -54,6 +54,9 @@ jobs:
           cd $GITHUB_WORKSPACE/outils/terraform
           sudo terraform apply -var="githubToken=${{ secrets.GITHUB_TOKEN }}" -var="env_name=${{ github.event.inputs.environment }}" -auto-approve
 
+      - name: Attendre que l'IP existe
+        run: sleep 30
+
       - name: Récupération de l'IP
         id: get-ingress-ip
         run: |
