--- a/outils/terraform/app/ingress/templates/ingress.yaml
+++ b/outils/terraform/app/ingress/templates/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ .Values.environment }}-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
   tls:
@@ -14,7 +15,7 @@ spec:
     - host: {{ .Values.environment }}.groupe6.froissant.work
       http:
         paths:
-          - path: /.*
+          - path: /
             pathType: Prefix
             backend:
               service:
