--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -14,3 +14,6 @@ FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 
 COPY --from=builder /frontend/dist .
+
+RUN rm /etc/nginx/conf.d/default.conf
+COPY ./frontend/nginx.conf /etc/nginx/conf.d/
