--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,6 +3,8 @@ server {
     server_name recette.groupe6.froissant.work;
 
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
